// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZForm demo -- base 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      checkbox_2
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- name 1`] = `
.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      input 0
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      input 1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      input 2
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      checkbox first
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      checkbox second
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      checkbox third
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      a.b.c.d
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      r[0][1][2][3]
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      z[0].a[1].b[2]
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- rule 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 8.33333333%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 41.66666667%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_2
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      input_3
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        value=""
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      checkbox_1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <input
        checked=""
        type="checkbox"
      />
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      select_1
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="1"
    >
      select_2
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="5"
    >
      <select>
        <option>
          请选择
        </option>
        <option
          selected=""
          value="1"
        >
          1
        </option>
        <option
          value="2"
        >
          2
        </option>
        <option
          value="3"
        >
          3
        </option>
        <option
          value="4"
        >
          4
        </option>
      </select>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    type="button"
  >
    submit
  </button>
</form>
`;

exports[`ZForm demo -- uhost 1`] = `
.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 16.66666667%;
}

.c6 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 83.33333333%;
}

.c2 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c2 .c4 {
  padding-left: 8px;
  padding-right: 8px;
}

.c3 {
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.c0 .c1 {
  margin-bottom: 16px;
}

.c0 .c1:last-child {
  margin-bottom: 0;
}

.c27 {
  vertical-align: baseline;
}

.c10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
  color: #3555f6;
  background: #fff;
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c10:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

.c12 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  border-color: #c3cad9;
  -webkit-transition: all .16s cubic-bezier(.4,0,.2,1);
  transition: all .16s cubic-bezier(.4,0,.2,1);
  background: #fafafc;
}

.c12:hover {
  background: #fff;
  color: #3555f6;
  border-color: #3555f6;
}

.c28 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #fff;
  border-color: #4683e6;
  border: none;
  background: linear-gradient(135deg,#5c8af7,#385ef5);
  box-shadow: 0 1px 5px 0 rgba(21,56,195,.12),0 2px 2px 0 rgba(8,155,140,0.24),0 3px 1px -3px rgba(58,96,245,.34);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c28:hover {
  color: #fff;
  border-color: #3664c8;
  background: linear-gradient(135deg,#5e95fb,#3a72f9);
  box-shadow: 0 1px 10px 0 rgba(21,56,195,.12),0 2px 4px -1px rgba(21,56,195,.2),0 4px 5px 0 rgba(21,56,195,.14);
}

.c9.c9 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
  z-index: 2;
}

.c9.c9:hover {
  z-index: 3;
}

.c11.c11 {
  min-width: 68px;
  text-align: center;
  border-radius: 0;
  font-size: 12px;
  position: relative;
}

.c11.c11:hover {
  z-index: 3;
}

.c7 {
  position: relative;
  margin-bottom: -8px;
}

.c7 .c29,
.c7 .style__RadioTagWrap-sc-25j3mq-3 {
  margin-right: 8px;
  margin-bottom: 8px;
}

.c7 .c29:last-child,
.c7 .style__RadioTagWrap-sc-25j3mq-3:last-child {
  margin-right: 0;
}

.c7 .c30 {
  margin-right: 12px;
  margin-bottom: 8px;
}

.c7 .c30:last-child {
  margin-right: 0;
}

.c7 .c31+.c31 {
  margin-left: -1px;
}

.c7 .c8 {
  margin-right: -1px;
  margin-bottom: 8px;
}

.c7 .c8:first-child {
  border-radius: 2px 0 0 2px;
}

.c7 .c8:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c25 {
  border-radius: 2px;
  cursor: pointer;
  padding: 0 8px;
  padding-right: 28px;
  box-sizing: border-box;
}

.c26 {
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.c23 {
  box-sizing: border-box;
  position: relative;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
  background-color: #fff;
}

.c23 .c24 {
  height: 28px;
  line-height: 28px;
  border: 1px none #c3cad9;
  box-shadow: 0 -1px 0 0 rgba(223,224,241,0.5),0 1px 0 0 rgba(223,224,241,.3),0 1px 1px 0 rgba(162,166,191,.5),0 2px 4px 0 rgba(228,229,242,.6);
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.c23 .c24:hover {
  border-color: #3555f6;
  box-shadow: 0 1px 10px 0 rgba(162,166,191,.12),0 2px 4px -1px rgba(162,166,191,.2),0 4px 5px 0 rgba(162,166,191,.14);
}

.c15 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c13 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #fff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.c13:hover {
  border-color: #3555f6;
}

.c13 .c19 {
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border: 1px solid #c3cad9;
  width: 20px;
  height: 20px;
}

.c13 .c21 {
  background-color: #e69b9b;
  left: 13px;
  height: 10px;
}

.c13 .c14 {
  border: 1px solid #c3cad9;
  background-color: #ebedf0;
  color: #6b798e;
}

.c13 .c16,
.c13 .c18 {
  line-height: 16px;
}

.c13 .c16 {
  padding-right: 20px;
}

.c13 .c18 {
  padding-left: 20px;
}

.c13 .c16 {
  display: none;
}

<form
  class="uc-fe-form c0"
>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      地域
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="10"
    >
      <div
        class="c7"
      >
        <button
          checked=""
          class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c9 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c10"
          type="button"
        >
          cn-zj
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          cn-bj1
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          hk
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          cn-bj2
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          us-ca
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          cn-gd
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          cn-sh
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          cn-sh2
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          us-ws
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          ge-fra
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          th-bkk
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          kr-seoul
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          sg
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          tw-kh
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          rus-mosc
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          jpn-tky
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          tw-tp
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          uae-dubai
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          idn-jakarta
        </button>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      可用区
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="10"
    >
      <div
        class="c7"
      >
        <button
          checked=""
          class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c9 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c10"
          type="button"
        >
          cn-zj-01
        </button>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      系列
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="10"
    >
      <div
        class="c7"
      >
        <button
          checked=""
          class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c9 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c10"
          type="button"
        >
          系列1
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          系列2
        </button>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      网络增强
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="10"
    >
      <div
        class="c13"
      >
        <div
          class="c14 c15"
        >
          <span
            class="c16 c17"
          >
            ON
          </span>
          <span
            class="c18 c17"
          >
            OFF
          </span>
          <span
            class="c19 c20"
          >
            <span
              class="c21 c22"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c1 uc-fe-form-item uc-fe-row c2"
  >
    <div
      class="uc-fe-form-label c3 c4 uc-fe-col c5"
      span="2"
    >
      镜像
    </div>
    <div
      class="uc-fe-form-controller c4 uc-fe-col c6"
      span="10"
    >
      <div
        class="c7"
      >
        <button
          checked=""
          class="c8 uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-button c9 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray uc-fe-button-checked c10"
          type="button"
        >
          标准
        </button>
        <button
          class="c8 uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-button c11 uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border-gray c12"
          type="button"
        >
          自制
        </button>
      </div>
      <div
        class="c23"
      >
        <div>
          <div
            class="c24 c25"
          >
            <div>
              请选择
            </div>
            <i
              class="c26 uc-fe-icon icon__down c27"
              type="down"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <p
    class="u-red"
  />
  <button
    class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary c28"
    type="button"
  >
    submit
  </button>
</form>
`;
